# office-tools-cli

./: .gitignore  README.md  main_script.py  pyproject.toml
agents/skills/office-tools/: SKILL.md
modules/: constants.py  docx_utils.py  file_utils.py  pdf_utils.py
